dragndrop: Allow drag'n'drop to start from elements inside a shadow root (Bug 1521471) r=emilio

Before this change, only elements inside the shadow root tree were scanned for the
draggable=true attribute. We now check the flattened tree instead so an element
inside a shadow root can start a drag for an element containing the shadow root.

Differential Revision: https://phabricator.services.mozilla.com/D30365